// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddTechnicalReq.vue renders props when passed 1`] = `
<div
  class="mx-auto outer-card v-card v-sheet theme--light"
>
  <div
    class="mx-auto v-card v-sheet theme--light"
  >
    <header
      class="bc-subtitle v-sheet v-sheet--tile theme--dark v-toolbar v-app-bar"
      style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <button
          aria-label="Back Button"
          class="v-btn v-btn--flat v-btn--icon v-btn--round theme--dark v-size--default"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-arrow-left theme--dark"
            />
          </span>
        </button>
         
        <div
          class="v-toolbar__title"
        >
          
        
      
        </div>
         
        <div
          class="spacer"
        />
      </div>
    </header>
     
    <form
      class="v-form pa-4 pt-6"
      novalidate="novalidate"
    >
      <div
        class="container"
      >
        <div
          class="row row--dense"
        >
          <div
            class="col-md-12 col-12"
          >
            <div
              class="pa-4 pt-6 mb-4 v-card v-sheet theme--light"
            >
              <div
                class="v-card__title headline bc-padding-left-0 text-capitalize"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
                
              
              </div>
            </div>
             
            <div
              class="pa-4 pt-6 v-card v-sheet theme--light"
            >
              <div
                class="bc-form-text"
                rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^(?:http(s)?:\\\\/\\\\/)[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+$/.test(v) || ' must be valid URL';
    }
  },v => (v || '').length <= len || 'Invalid character length, max length ' + len"
              >
                <div
                  class="text-left my-1"
                >
                  
     
                  <!---->
                </div>
                 
                <!---->
                 
                <div
                  class="v-input input theme--light v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend>
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <input
                          id="input-14"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <span
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="text-left my-1"
              >
                
                
              
              </div>
               
              <div
                class="row v-form px-4 "
              >
                <div
                  class="redirect-div"
                >
                  <div
                    class="bc-form-text addUri"
                    rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^((?:http(s)?:\\\\/\\\\/)[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+|(localhost).*)$/.test(v) || ' must be valid URL (localhost allowed)';
    }
  }"
                  >
                    <div
                      class="text-left my-1"
                    >
                      
     
                      <!---->
                    </div>
                     
                    <!---->
                     
                    <div
                      class="v-input input theme--light v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--outlined"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <fieldset
                            aria-hidden="true"
                          >
                            <legend>
                              <span>
                                ​
                              </span>
                            </legend>
                          </fieldset>
                          <div
                            class="v-text-field__slot"
                          >
                            <input
                              id="input-18"
                              type="text"
                            />
                          </div>
                        </div>
                        <div
                          class="v-text-field__details"
                        >
                          <div
                            class="v-messages theme--light"
                          >
                            <span
                              class="v-messages__wrapper"
                              name="message-transition"
                              tag="div"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="clear-icon"
                >
                  <i
                    class="v-icon notranslate ml-2   v-icon--link mdi mdi-close theme--light"
                    role="button"
                    style="font-size: 36px;"
                    tabindex="0"
                  />
                </div>
              </div>
               
              <div
                class="add-url text-left"
              >
                
                
              
              </div>
               
              <div
                class="v-card__title text-left bc-padding-left-0"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="height: auto;"
                    >
                      <div
                        aria-labelledby="input-22"
                        class="v-input--radio-group__input"
                        role="radiogroup"
                      >
                        <div
                          class="v-radio theme--light v-item--active"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="true"
                              id="input-23"
                              name="radio-22"
                              role="radio"
                              type="radio"
                              value="1"
                            />
                            <div
                              class="v-input--selection-controls__ripple primary--text"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-radiobox-marked theme--light primary--text"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            for="input-23"
                            style="left: 0px; position: relative;"
                          >
                            Signed JWT
                          </label>
                        </div>
                         
                        <div
                          class="small-hint radio-help"
                        >
                          
                    
                  
                        </div>
                         
                        <div
                          class="row pad-radio"
                        >
                          <div
                            class="col-12 col-md-5"
                          >
                            <div
                              class="bc-form-text"
                              outlined=""
                              rules="v => !!v || 'This field is required'"
                              value="RS256"
                            >
                              <div
                                class="text-left my-1"
                              >
                                
                              </div>
                               
                              <!---->
                               
                              <div
                                class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--outlined v-select"
                              >
                                <div
                                  class="v-input__control"
                                >
                                  <div
                                    aria-expanded="false"
                                    aria-haspopup="listbox"
                                    aria-owns="list-26"
                                    class="v-input__slot"
                                    role="button"
                                  >
                                    <fieldset
                                      aria-hidden="true"
                                    >
                                      <legend>
                                        <span>
                                          ​
                                        </span>
                                      </legend>
                                    </fieldset>
                                    <div
                                      class="v-select__slot"
                                    >
                                      <div
                                        class="v-select__selections"
                                      >
                                        <div
                                          class="v-select__selection v-select__selection--comma"
                                        >
                                          RS256
                                        </div>
                                        <input
                                          aria-readonly="true"
                                          autocomplete="off"
                                          id="input-26"
                                          readonly="readonly"
                                          type="text"
                                        />
                                      </div>
                                      <div
                                        class="v-input__append-inner"
                                      >
                                        <div
                                          class="v-input__icon v-input__icon--append"
                                        >
                                          <i
                                            aria-hidden="true"
                                            class="v-icon notranslate mdi mdi-menu-down theme--light"
                                          />
                                        </div>
                                      </div>
                                      <input
                                        type="hidden"
                                        value="RS256"
                                      />
                                    </div>
                                    <div
                                      class="v-menu"
                                    >
                                      <div
                                        class="v-menu__content theme--light "
                                        style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="v-text-field__details"
                                  >
                                    <div
                                      class="v-messages theme--light"
                                    >
                                      <span
                                        class="v-messages__wrapper"
                                        name="message-transition"
                                        tag="div"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                         
                        <div
                          class="v-radio theme--light"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="false"
                              id="input-33"
                              name="radio-22"
                              role="radio"
                              type="radio"
                              value="2"
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            for="input-33"
                            style="left: 0px; position: relative;"
                          >
                            Secure JWT
                          </label>
                        </div>
                         
                        <div
                          class="small-hint radio-help"
                        >
                          
                    
                  
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
               
              <!---->
               
              <hr
                aria-orientation="horizontal"
                class="v-divider theme--light"
                role="separator"
              />
               
              <div
                class="v-card__actions"
              >
                <div
                  class="spacer"
                />
                 
                <button
                  aria-label="Back Button"
                  class="btn v-btn v-btn--contained theme--light v-size--default secondary-btn normal"
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  
                
                  </span>
                </button>
                 
                <button
                  aria-disabled="true"
                  class="btn white--text submit-req ml-6 v-btn v-btn--depressed v-btn--disabled theme--light v-size--default primary normal disabled"
                  depressed=""
                  disabled="disabled"
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  
                
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`AddTechnicalReq.vue renders props when passed 2`] = `
<div
  class="mx-auto outer-card v-card v-sheet theme--light"
>
  <div
    class="mx-auto v-card v-sheet theme--light"
  >
    <header
      class="bc-subtitle v-sheet v-sheet--tile theme--dark v-toolbar v-app-bar"
      style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <button
          aria-label="Back Button"
          class="v-btn v-btn--flat v-btn--icon v-btn--round theme--dark v-size--default"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-arrow-left theme--dark"
            />
          </span>
        </button>
         
        <div
          class="v-toolbar__title"
        >
          
        
      
        </div>
         
        <div
          class="spacer"
        />
      </div>
    </header>
     
    <form
      class="v-form pa-4 pt-6"
      novalidate="novalidate"
    >
      <div
        class="container"
      >
        <div
          class="row row--dense"
        >
          <div
            class="col-md-12 col-12"
          >
            <div
              class="pa-4 pt-6 mb-4 v-card v-sheet theme--light"
            >
              <div
                class="v-card__title headline bc-padding-left-0 text-capitalize"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
                
              
              </div>
            </div>
             
            <div
              class="pa-4 pt-6 v-card v-sheet theme--light"
            >
              <div
                class="bc-form-text"
                rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^(?:http(s)?:\\\\/\\\\/)[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+$/.test(v) || ' must be valid URL';
    }
  },v => (v || '').length <= len || 'Invalid character length, max length ' + len"
              >
                <div
                  class="text-left my-1"
                >
                  
     
                  <!---->
                </div>
                 
                <!---->
                 
                <div
                  class="v-input input theme--light v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend>
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <input
                          id="input-54"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <span
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="text-left my-1"
              >
                
                
              
              </div>
               
              <div
                class="row v-form px-4 "
              >
                <div
                  class="redirect-div"
                >
                  <div
                    class="bc-form-text addUri"
                    rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^((?:http(s)?:\\\\/\\\\/)[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+|(localhost).*)$/.test(v) || ' must be valid URL (localhost allowed)';
    }
  }"
                  >
                    <div
                      class="text-left my-1"
                    >
                      
     
                      <!---->
                    </div>
                     
                    <!---->
                     
                    <div
                      class="v-input input theme--light v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--outlined"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <fieldset
                            aria-hidden="true"
                          >
                            <legend>
                              <span>
                                ​
                              </span>
                            </legend>
                          </fieldset>
                          <div
                            class="v-text-field__slot"
                          >
                            <input
                              id="input-58"
                              type="text"
                            />
                          </div>
                        </div>
                        <div
                          class="v-text-field__details"
                        >
                          <div
                            class="v-messages theme--light"
                          >
                            <span
                              class="v-messages__wrapper"
                              name="message-transition"
                              tag="div"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="clear-icon"
                >
                  <i
                    class="v-icon notranslate ml-2   v-icon--link mdi mdi-close theme--light"
                    role="button"
                    style="font-size: 36px;"
                    tabindex="0"
                  />
                </div>
              </div>
               
              <div
                class="add-url text-left"
              >
                
                
              
              </div>
               
              <div
                class="v-card__title text-left bc-padding-left-0"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="height: auto;"
                    >
                      <div
                        aria-labelledby="input-62"
                        class="v-input--radio-group__input"
                        role="radiogroup"
                      >
                        <div
                          class="v-radio theme--light v-item--active"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="true"
                              id="input-63"
                              name="radio-62"
                              role="radio"
                              type="radio"
                              value="1"
                            />
                            <div
                              class="v-input--selection-controls__ripple primary--text"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-radiobox-marked theme--light primary--text"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            for="input-63"
                            style="left: 0px; position: relative;"
                          >
                            Signed JWT
                          </label>
                        </div>
                         
                        <div
                          class="small-hint radio-help"
                        >
                          
                    
                  
                        </div>
                         
                        <div
                          class="row pad-radio"
                        >
                          <div
                            class="col-12 col-md-5"
                          >
                            <div
                              class="bc-form-text"
                              outlined=""
                              rules="v => !!v || 'This field is required'"
                              value="RS256"
                            >
                              <div
                                class="text-left my-1"
                              >
                                
                              </div>
                               
                              <!---->
                               
                              <div
                                class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--outlined v-select"
                              >
                                <div
                                  class="v-input__control"
                                >
                                  <div
                                    aria-expanded="false"
                                    aria-haspopup="listbox"
                                    aria-owns="list-66"
                                    class="v-input__slot"
                                    role="button"
                                  >
                                    <fieldset
                                      aria-hidden="true"
                                    >
                                      <legend>
                                        <span>
                                          ​
                                        </span>
                                      </legend>
                                    </fieldset>
                                    <div
                                      class="v-select__slot"
                                    >
                                      <div
                                        class="v-select__selections"
                                      >
                                        <div
                                          class="v-select__selection v-select__selection--comma"
                                        >
                                          RS256
                                        </div>
                                        <input
                                          aria-readonly="true"
                                          autocomplete="off"
                                          id="input-66"
                                          readonly="readonly"
                                          type="text"
                                        />
                                      </div>
                                      <div
                                        class="v-input__append-inner"
                                      >
                                        <div
                                          class="v-input__icon v-input__icon--append"
                                        >
                                          <i
                                            aria-hidden="true"
                                            class="v-icon notranslate mdi mdi-menu-down theme--light"
                                          />
                                        </div>
                                      </div>
                                      <input
                                        type="hidden"
                                        value="RS256"
                                      />
                                    </div>
                                    <div
                                      class="v-menu"
                                    >
                                      <div
                                        class="v-menu__content theme--light "
                                        style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="v-text-field__details"
                                  >
                                    <div
                                      class="v-messages theme--light"
                                    >
                                      <span
                                        class="v-messages__wrapper"
                                        name="message-transition"
                                        tag="div"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                         
                        <div
                          class="v-radio theme--light"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="false"
                              id="input-73"
                              name="radio-62"
                              role="radio"
                              type="radio"
                              value="2"
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            for="input-73"
                            style="left: 0px; position: relative;"
                          >
                            Secure JWT
                          </label>
                        </div>
                         
                        <div
                          class="small-hint radio-help"
                        >
                          
                    
                  
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
               
              <!---->
               
              <hr
                aria-orientation="horizontal"
                class="v-divider theme--light"
                role="separator"
              />
               
              <div
                class="v-card__actions"
              >
                <div
                  class="spacer"
                />
                 
                <button
                  aria-label="Back Button"
                  class="btn v-btn v-btn--contained theme--light v-size--default secondary-btn normal"
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  
                
                  </span>
                </button>
                 
                <button
                  aria-disabled="true"
                  class="btn white--text submit-req ml-6 v-btn v-btn--depressed v-btn--disabled theme--light v-size--default primary normal disabled"
                  depressed=""
                  disabled="disabled"
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  
                
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`AddTechnicalReq.vue submit form on onlick  1`] = `
<div
  class="mx-auto outer-card v-card v-sheet theme--light"
>
  <div
    class="mx-auto v-card v-sheet theme--light"
  >
    <header
      class="bc-subtitle v-sheet v-sheet--tile theme--dark v-toolbar v-app-bar"
      style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <button
          aria-label="Back Button"
          class="v-btn v-btn--flat v-btn--icon v-btn--round theme--dark v-size--default"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-arrow-left theme--dark"
            />
          </span>
        </button>
         
        <div
          class="v-toolbar__title"
        >
          
        
      
        </div>
         
        <div
          class="spacer"
        />
      </div>
    </header>
     
    <form
      class="v-form pa-4 pt-6"
      novalidate="novalidate"
    >
      <div
        class="container"
      >
        <div
          class="row row--dense"
        >
          <div
            class="col-md-12 col-12"
          >
            <div
              class="pa-4 pt-6 mb-4 v-card v-sheet theme--light"
            >
              <div
                class="v-card__title headline bc-padding-left-0 text-capitalize"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
                
              
              </div>
            </div>
             
            <div
              class="pa-4 pt-6 v-card v-sheet theme--light"
            >
              <div
                class="bc-form-text"
                rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^(?:http(s)?:\\\\/\\\\/)[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+$/.test(v) || ' must be valid URL';
    }
  },v => (v || '').length <= len || 'Invalid character length, max length ' + len"
              >
                <div
                  class="text-left my-1"
                >
                  
     
                  <!---->
                </div>
                 
                <!---->
                 
                <div
                  class="v-input input theme--light v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend>
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <input
                          id="input-94"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <span
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="text-left my-1"
              >
                
                
              
              </div>
               
              <div
                class="row v-form px-4 "
              >
                <div
                  class="redirect-div"
                >
                  <div
                    class="bc-form-text addUri"
                    rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^((?:http(s)?:\\\\/\\\\/)[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+|(localhost).*)$/.test(v) || ' must be valid URL (localhost allowed)';
    }
  }"
                  >
                    <div
                      class="text-left my-1"
                    >
                      
     
                      <!---->
                    </div>
                     
                    <!---->
                     
                    <div
                      class="v-input input theme--light v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--outlined"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <fieldset
                            aria-hidden="true"
                          >
                            <legend>
                              <span>
                                ​
                              </span>
                            </legend>
                          </fieldset>
                          <div
                            class="v-text-field__slot"
                          >
                            <input
                              id="input-98"
                              type="text"
                            />
                          </div>
                        </div>
                        <div
                          class="v-text-field__details"
                        >
                          <div
                            class="v-messages theme--light"
                          >
                            <span
                              class="v-messages__wrapper"
                              name="message-transition"
                              tag="div"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="clear-icon"
                >
                  <i
                    class="v-icon notranslate ml-2   v-icon--link mdi mdi-close theme--light"
                    role="button"
                    style="font-size: 36px;"
                    tabindex="0"
                  />
                </div>
              </div>
               
              <div
                class="add-url text-left"
              >
                
                
              
              </div>
               
              <div
                class="v-card__title text-left bc-padding-left-0"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="height: auto;"
                    >
                      <div
                        aria-labelledby="input-102"
                        class="v-input--radio-group__input"
                        role="radiogroup"
                      >
                        <div
                          class="v-radio theme--light v-item--active"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="true"
                              id="input-103"
                              name="radio-102"
                              role="radio"
                              type="radio"
                              value="1"
                            />
                            <div
                              class="v-input--selection-controls__ripple primary--text"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-radiobox-marked theme--light primary--text"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            for="input-103"
                            style="left: 0px; position: relative;"
                          >
                            Signed JWT
                          </label>
                        </div>
                         
                        <div
                          class="small-hint radio-help"
                        >
                          
                    
                  
                        </div>
                         
                        <div
                          class="row pad-radio"
                        >
                          <div
                            class="col-12 col-md-5"
                          >
                            <div
                              class="bc-form-text"
                              outlined=""
                              rules="v => !!v || 'This field is required'"
                              value="RS256"
                            >
                              <div
                                class="text-left my-1"
                              >
                                
                              </div>
                               
                              <!---->
                               
                              <div
                                class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--outlined v-select"
                              >
                                <div
                                  class="v-input__control"
                                >
                                  <div
                                    aria-expanded="false"
                                    aria-haspopup="listbox"
                                    aria-owns="list-106"
                                    class="v-input__slot"
                                    role="button"
                                  >
                                    <fieldset
                                      aria-hidden="true"
                                    >
                                      <legend>
                                        <span>
                                          ​
                                        </span>
                                      </legend>
                                    </fieldset>
                                    <div
                                      class="v-select__slot"
                                    >
                                      <div
                                        class="v-select__selections"
                                      >
                                        <div
                                          class="v-select__selection v-select__selection--comma"
                                        >
                                          RS256
                                        </div>
                                        <input
                                          aria-readonly="true"
                                          autocomplete="off"
                                          id="input-106"
                                          readonly="readonly"
                                          type="text"
                                        />
                                      </div>
                                      <div
                                        class="v-input__append-inner"
                                      >
                                        <div
                                          class="v-input__icon v-input__icon--append"
                                        >
                                          <i
                                            aria-hidden="true"
                                            class="v-icon notranslate mdi mdi-menu-down theme--light"
                                          />
                                        </div>
                                      </div>
                                      <input
                                        type="hidden"
                                        value="RS256"
                                      />
                                    </div>
                                    <div
                                      class="v-menu"
                                    >
                                      <div
                                        class="v-menu__content theme--light "
                                        style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="v-text-field__details"
                                  >
                                    <div
                                      class="v-messages theme--light"
                                    >
                                      <span
                                        class="v-messages__wrapper"
                                        name="message-transition"
                                        tag="div"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                         
                        <div
                          class="v-radio theme--light"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="false"
                              id="input-113"
                              name="radio-102"
                              role="radio"
                              type="radio"
                              value="2"
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            for="input-113"
                            style="left: 0px; position: relative;"
                          >
                            Secure JWT
                          </label>
                        </div>
                         
                        <div
                          class="small-hint radio-help"
                        >
                          
                    
                  
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
               
              <!---->
               
              <hr
                aria-orientation="horizontal"
                class="v-divider theme--light"
                role="separator"
              />
               
              <div
                class="v-card__actions"
              >
                <div
                  class="spacer"
                />
                 
                <button
                  aria-label="Back Button"
                  class="btn v-btn v-btn--contained theme--light v-size--default secondary-btn normal"
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  
                
                  </span>
                </button>
                 
                <button
                  aria-disabled="true"
                  class="btn white--text submit-req ml-6 v-btn v-btn--depressed v-btn--disabled theme--light v-size--default primary normal disabled"
                  depressed=""
                  disabled="disabled"
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  
                
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
